postgres/helm/postgres-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: admin-postgres
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: rudshtein.local
      http:
        paths:
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: postgres-postgresql
                port:
                  number: 5432
